# qt-dbhelper

./: .travis.yml  CMakeLists.txt  README.md
include/: columnlist.h  insert.h  purequery.h  querytype.h  select.h  update.h  value.h
include/private/: query.h  querystream.h
include/statements/: from.h  where.h
src/: columnlist.cpp  insert.cpp  purequery.cpp  querytype.cpp  select.cpp  update.cpp  value.cpp
src/private/: query.cpp  querystream.cpp
src/statements/: from.cpp  where.cpp
tests/: CMakeLists.txt  init_tests.cpp  main.cpp  shutdown_tests.cpp  sql.h  tst_insert.cpp  tst_pure_query.cpp  tst_select.cpp  tst_update.cpp
tests/sql/: create.sql  data.sql  drop.sql
